decaf.output
State 70 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 137 conflicts: 2 shift/reduce
State 154 conflicts: 1 shift/reduce
State 162 conflicts: 2 shift/reduce
State 167 conflicts: 1 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Class
    3        | Classes Class

    4 Class: CLASS IDENTIFIER Super LBRACE Members RBRACE
    5      | CLASS IDENTIFIER LBRACE Members RBRACE

    6 Super: EXTENDS IDENTIFIER

    7 Members: %empty
    8        | Members Member

    9 Member: Field
   10       | Method
   11       | Ctor

   12 Field: Modifiers Type VarDeclaratorList SEMICOLON

   13 Method: Modifiers Type IDENTIFIER FormalArgs Block

   14 Ctor: Modifiers IDENTIFIER FormalArgs Block

   15 Modifiers: %empty
   16          | Modifiers Modifier

   17 Modifier: STATIC
   18         | PUBLIC
   19         | PRIVATE
   20         | PROTECTED

   21 FormalArgs: LPAREN FormalArgList RPAREN
   22           | LPAREN RPAREN

   23 FormalArgList: FormalArg
   24              | FormalArgList COMMA FormalArg

   25 FormalArg: Type VarDeclaratorId

   26 Type: PrimitiveType
   27     | IDENTIFIER
   28     | Type LBRACKET RBRACKET

   29 PrimitiveType: BOOLEAN
   30              | CHAR
   31              | INT
   32              | VOID

   33 VarDeclaratorList: VarDeclarator
   34                  | VarDeclaratorList COMMA VarDeclarator

   35 VarDeclarator: VarDeclaratorId
   36              | VarDeclaratorId ASSIGN Expression

   37 VarDeclaratorId: IDENTIFIER
   38                | VarDeclaratorId LBRACKET RBRACKET

   39 Block: LBRACE Statements RBRACE

   40 Statements: %empty
   41           | Statements Statement

   42 Statement: SEMICOLON
   43          | Type VarDeclaratorList SEMICOLON
   44          | IF LPAREN Expression RPAREN Statement
   45          | IF LPAREN Expression RPAREN Statement ELSE Statement
   46          | Expression SEMICOLON
   47          | WHILE LPAREN RPAREN Statement
   48          | RETURN Expression SEMICOLON
   49          | RETURN SEMICOLON
   50          | CONTINUE SEMICOLON
   51          | BREAK SEMICOLON
   52          | Block

   53 Expression: Expression ASSIGN Expression
   54           | Expression OR Expression
   55           | Expression AND Expression
   56           | Expression EQ Expression
   57           | Expression NEQ Expression
   58           | Expression LESS Expression
   59           | Expression GREATER Expression
   60           | Expression LEQ Expression
   61           | Expression GEQ Expression
   62           | Expression PLUS Expression
   63           | Expression MINUS Expression
   64           | Expression MUL Expression
   65           | Expression DIV Expression
   66           | Expression MOD Expression
   67           | PLUS Expression
   68           | MINUS Expression
   69           | NOT Expression
   70           | Primary

   71 Primary: NewArrayExpr
   72        | NonNewArrayExpr
   73        | IDENTIFIER

   74 NewArrayExpr: NEW IDENTIFIER Dimensions
   75             | NEW PrimitiveType Dimensions

   76 Dimensions: Dimension
   77           | Dimensions Dimension

   78 Dimension: LBRACKET Expression RBRACKET

   79 NonNewArrayExpr: Literal
   80                | THIS
   81                | LPAREN Expression RPAREN
   82                | NEW IDENTIFIER ActualArgs
   83                | IDENTIFIER ActualArgs
   84                | Primary PERIOD IDENTIFIER ActualArgs
   85                | SUPER PERIOD IDENTIFIER ActualArgs
   86                | ArrayExpr
   87                | FieldExpr

   88 FieldExpr: Primary PERIOD IDENTIFIER
   89          | SUPER PERIOD IDENTIFIER

   90 ArrayExpr: IDENTIFIER Dimension
   91          | NonNewArrayExpr Dimension

   92 Literal: DECAF_NULL
   93        | BOOLEAN_LITERAL
   94        | INTEGER
   95        | CHARACTER
   96        | STRING

   97 ActualArgs: LPAREN ExprList RPAREN
   98           | LPAREN RPAREN

   99 ExprList: Expression
  100         | ExprList Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
BREAK (258) 51
CLASS (259) 4 5
CONTINUE (260) 50
ELSE (261) 45
EXTENDS (262) 6
IF (263) 44 45
NEW (264) 74 75 82
PRIVATE (265) 19
PROTECTED (266) 20
PUBLIC (267) 18
RETURN (268) 48 49
STATIC (269) 17
SUPER (270) 85 89
THIS (271) 80
WHILE (272) 47
BOOLEAN (273) 29
CHAR (274) 30
INT (275) 31
VOID (276) 32
DECAF_NULL (277) 92
LPAREN (278) 21 22 44 45 47 81 97 98
RPAREN (279) 21 22 44 45 47 81 97 98
LBRACE (280) 4 5 39
RBRACE (281) 4 5 39
LBRACKET (282) 28 38 78
RBRACKET (283) 28 38 78
SEMICOLON (284) 12 42 43 46 48 49 50 51
COMMA (285) 24 34
PERIOD (286) 84 85 88 89
ASSIGN (287) 36 53
GREATER (288) 59
LESS (289) 58
NOT (290) 69
EQ (291) 56
GEQ (292) 61
LEQ (293) 60
NEQ (294) 57
PLUS (295) 62 67
MINUS (296) 63 68
MUL (297) 64
DIV (298) 65
AND (299) 55
OR (300) 54
MOD (301) 66
IDENTIFIER (302) 4 5 6 13 14 27 37 73 74 82 83 84 85 88 89 90
CHARACTER (303) 95
STRING (304) 96
BOOLEAN_LITERAL (305) 93
INTEGER (306) 94
UMINUS (307)
UPLUS (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Start (55)
    on left: 1, on right: 0
Classes (56)
    on left: 2 3, on right: 1 3
Class (57)
    on left: 4 5, on right: 2 3
Super (58)
    on left: 6, on right: 4
Members (59)
    on left: 7 8, on right: 4 5 8
Member (60)
    on left: 9 10 11, on right: 8
Field (61)
    on left: 12, on right: 9
Method (62)
    on left: 13, on right: 10
Ctor (63)
    on left: 14, on right: 11
Modifiers (64)
    on left: 15 16, on right: 12 13 14 16
Modifier (65)
    on left: 17 18 19 20, on right: 16
FormalArgs (66)
    on left: 21 22, on right: 13 14
FormalArgList (67)
    on left: 23 24, on right: 21 24
FormalArg (68)
    on left: 25, on right: 23 24
Type (69)
    on left: 26 27 28, on right: 12 13 25 28 43
PrimitiveType (70)
    on left: 29 30 31 32, on right: 26 75
VarDeclaratorList (71)
    on left: 33 34, on right: 12 34 43
VarDeclarator (72)
    on left: 35 36, on right: 33 34
VarDeclaratorId (73)
    on left: 37 38, on right: 25 35 36 38
Block (74)
    on left: 39, on right: 13 14 52
Statements (75)
    on left: 40 41, on right: 39 41
Statement (76)
    on left: 42 43 44 45 46 47 48 49 50 51 52, on right: 41 44 45 47
Expression (77)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70,
    on right: 36 44 45 46 48 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 78 81 99 100
Primary (78)
    on left: 71 72 73, on right: 70 84 88
NewArrayExpr (79)
    on left: 74 75, on right: 71
Dimensions (80)
    on left: 76 77, on right: 74 75 77
Dimension (81)
    on left: 78, on right: 76 77 90 91
NonNewArrayExpr (82)
    on left: 79 80 81 82 83 84 85 86 87, on right: 72 91
FieldExpr (83)
    on left: 88 89, on right: 87
ArrayExpr (84)
    on left: 90 91, on right: 86
Literal (85)
    on left: 92 93 94 95 96, on right: 79
ActualArgs (86)
    on left: 97 98, on right: 82 83 84 85
ExprList (87)
    on left: 99 100, on right: 97 100


State 0

    0 $accept: . Start $end

    CLASS  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


State 1

    4 Class: CLASS . IDENTIFIER Super LBRACE Members RBRACE
    5      | CLASS . IDENTIFIER LBRACE Members RBRACE

    IDENTIFIER  shift, and go to state 5


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 6


State 3

    1 Start: Classes .
    3 Classes: Classes . Class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class  go to state 7


State 4

    2 Classes: Class .

    $default  reduce using rule 2 (Classes)


State 5

    4 Class: CLASS IDENTIFIER . Super LBRACE Members RBRACE
    5      | CLASS IDENTIFIER . LBRACE Members RBRACE

    EXTENDS  shift, and go to state 8
    LBRACE   shift, and go to state 9

    Super  go to state 10


State 6

    0 $accept: Start $end .

    $default  accept


State 7

    3 Classes: Classes Class .

    $default  reduce using rule 3 (Classes)


State 8

    6 Super: EXTENDS . IDENTIFIER

    IDENTIFIER  shift, and go to state 11


State 9

    5 Class: CLASS IDENTIFIER LBRACE . Members RBRACE

    $default  reduce using rule 7 (Members)

    Members  go to state 12


State 10

    4 Class: CLASS IDENTIFIER Super . LBRACE Members RBRACE

    LBRACE  shift, and go to state 13


State 11

    6 Super: EXTENDS IDENTIFIER .

    $default  reduce using rule 6 (Super)


State 12

    5 Class: CLASS IDENTIFIER LBRACE Members . RBRACE
    8 Members: Members . Member

    RBRACE  shift, and go to state 14

    $default  reduce using rule 15 (Modifiers)

    Member     go to state 15
    Field      go to state 16
    Method     go to state 17
    Ctor       go to state 18
    Modifiers  go to state 19


State 13

    4 Class: CLASS IDENTIFIER Super LBRACE . Members RBRACE

    $default  reduce using rule 7 (Members)

    Members  go to state 20


State 14

    5 Class: CLASS IDENTIFIER LBRACE Members RBRACE .

    $default  reduce using rule 5 (Class)


State 15

    8 Members: Members Member .

    $default  reduce using rule 8 (Members)


State 16

    9 Member: Field .

    $default  reduce using rule 9 (Member)


State 17

   10 Member: Method .

    $default  reduce using rule 10 (Member)


State 18

   11 Member: Ctor .

    $default  reduce using rule 11 (Member)


State 19

   12 Field: Modifiers . Type VarDeclaratorList SEMICOLON
   13 Method: Modifiers . Type IDENTIFIER FormalArgs Block
   14 Ctor: Modifiers . IDENTIFIER FormalArgs Block
   16 Modifiers: Modifiers . Modifier

    PRIVATE     shift, and go to state 21
    PROTECTED   shift, and go to state 22
    PUBLIC      shift, and go to state 23
    STATIC      shift, and go to state 24
    BOOLEAN     shift, and go to state 25
    CHAR        shift, and go to state 26
    INT         shift, and go to state 27
    VOID        shift, and go to state 28
    IDENTIFIER  shift, and go to state 29

    Modifier       go to state 30
    Type           go to state 31
    PrimitiveType  go to state 32


State 20

    4 Class: CLASS IDENTIFIER Super LBRACE Members . RBRACE
    8 Members: Members . Member

    RBRACE  shift, and go to state 33

    $default  reduce using rule 15 (Modifiers)

    Member     go to state 15
    Field      go to state 16
    Method     go to state 17
    Ctor       go to state 18
    Modifiers  go to state 19


State 21

   19 Modifier: PRIVATE .

    $default  reduce using rule 19 (Modifier)


State 22

   20 Modifier: PROTECTED .

    $default  reduce using rule 20 (Modifier)


State 23

   18 Modifier: PUBLIC .

    $default  reduce using rule 18 (Modifier)


State 24

   17 Modifier: STATIC .

    $default  reduce using rule 17 (Modifier)


State 25

   29 PrimitiveType: BOOLEAN .

    $default  reduce using rule 29 (PrimitiveType)


State 26

   30 PrimitiveType: CHAR .

    $default  reduce using rule 30 (PrimitiveType)


State 27

   31 PrimitiveType: INT .

    $default  reduce using rule 31 (PrimitiveType)


State 28

   32 PrimitiveType: VOID .

    $default  reduce using rule 32 (PrimitiveType)


State 29

   14 Ctor: Modifiers IDENTIFIER . FormalArgs Block
   27 Type: IDENTIFIER .

    LPAREN  shift, and go to state 34

    $default  reduce using rule 27 (Type)

    FormalArgs  go to state 35


State 30

   16 Modifiers: Modifiers Modifier .

    $default  reduce using rule 16 (Modifiers)


State 31

   12 Field: Modifiers Type . VarDeclaratorList SEMICOLON
   13 Method: Modifiers Type . IDENTIFIER FormalArgs Block
   28 Type: Type . LBRACKET RBRACKET

    LBRACKET    shift, and go to state 36
    IDENTIFIER  shift, and go to state 37

    VarDeclaratorList  go to state 38
    VarDeclarator      go to state 39
    VarDeclaratorId    go to state 40


State 32

   26 Type: PrimitiveType .

    $default  reduce using rule 26 (Type)


State 33

    4 Class: CLASS IDENTIFIER Super LBRACE Members RBRACE .

    $default  reduce using rule 4 (Class)


State 34

   21 FormalArgs: LPAREN . FormalArgList RPAREN
   22           | LPAREN . RPAREN

    BOOLEAN     shift, and go to state 25
    CHAR        shift, and go to state 26
    INT         shift, and go to state 27
    VOID        shift, and go to state 28
    RPAREN      shift, and go to state 41
    IDENTIFIER  shift, and go to state 42

    FormalArgList  go to state 43
    FormalArg      go to state 44
    Type           go to state 45
    PrimitiveType  go to state 32


State 35

   14 Ctor: Modifiers IDENTIFIER FormalArgs . Block

    LBRACE  shift, and go to state 46

    Block  go to state 47


State 36

   28 Type: Type LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 48


State 37

   13 Method: Modifiers Type IDENTIFIER . FormalArgs Block
   37 VarDeclaratorId: IDENTIFIER .

    LPAREN  shift, and go to state 34

    $default  reduce using rule 37 (VarDeclaratorId)

    FormalArgs  go to state 49


State 38

   12 Field: Modifiers Type VarDeclaratorList . SEMICOLON
   34 VarDeclaratorList: VarDeclaratorList . COMMA VarDeclarator

    SEMICOLON  shift, and go to state 50
    COMMA      shift, and go to state 51


State 39

   33 VarDeclaratorList: VarDeclarator .

    $default  reduce using rule 33 (VarDeclaratorList)


State 40

   35 VarDeclarator: VarDeclaratorId .
   36              | VarDeclaratorId . ASSIGN Expression
   38 VarDeclaratorId: VarDeclaratorId . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 52
    ASSIGN    shift, and go to state 53

    $default  reduce using rule 35 (VarDeclarator)


State 41

   22 FormalArgs: LPAREN RPAREN .

    $default  reduce using rule 22 (FormalArgs)


State 42

   27 Type: IDENTIFIER .

    $default  reduce using rule 27 (Type)


State 43

   21 FormalArgs: LPAREN FormalArgList . RPAREN
   24 FormalArgList: FormalArgList . COMMA FormalArg

    RPAREN  shift, and go to state 54
    COMMA   shift, and go to state 55


State 44

   23 FormalArgList: FormalArg .

    $default  reduce using rule 23 (FormalArgList)


State 45

   25 FormalArg: Type . VarDeclaratorId
   28 Type: Type . LBRACKET RBRACKET

    LBRACKET    shift, and go to state 36
    IDENTIFIER  shift, and go to state 56

    VarDeclaratorId  go to state 57


State 46

   39 Block: LBRACE . Statements RBRACE

    $default  reduce using rule 40 (Statements)

    Statements  go to state 58


State 47

   14 Ctor: Modifiers IDENTIFIER FormalArgs Block .

    $default  reduce using rule 14 (Ctor)


State 48

   28 Type: Type LBRACKET RBRACKET .

    $default  reduce using rule 28 (Type)


State 49

   13 Method: Modifiers Type IDENTIFIER FormalArgs . Block

    LBRACE  shift, and go to state 46

    Block  go to state 59


State 50

   12 Field: Modifiers Type VarDeclaratorList SEMICOLON .

    $default  reduce using rule 12 (Field)


State 51

   34 VarDeclaratorList: VarDeclaratorList COMMA . VarDeclarator

    IDENTIFIER  shift, and go to state 56

    VarDeclarator    go to state 60
    VarDeclaratorId  go to state 40


State 52

   38 VarDeclaratorId: VarDeclaratorId LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 61


State 53

   36 VarDeclarator: VarDeclaratorId ASSIGN . Expression

    NEW              shift, and go to state 62
    SUPER            shift, and go to state 63
    THIS             shift, and go to state 64
    DECAF_NULL       shift, and go to state 65
    LPAREN           shift, and go to state 66
    NOT              shift, and go to state 67
    PLUS             shift, and go to state 68
    MINUS            shift, and go to state 69
    IDENTIFIER       shift, and go to state 70
    CHARACTER        shift, and go to state 71
    STRING           shift, and go to state 72
    BOOLEAN_LITERAL  shift, and go to state 73
    INTEGER          shift, and go to state 74

    Expression       go to state 75
    Primary          go to state 76
    NewArrayExpr     go to state 77
    NonNewArrayExpr  go to state 78
    FieldExpr        go to state 79
    ArrayExpr        go to state 80
    Literal          go to state 81


State 54

   21 FormalArgs: LPAREN FormalArgList RPAREN .

    $default  reduce using rule 21 (FormalArgs)


State 55

   24 FormalArgList: FormalArgList COMMA . FormalArg

    BOOLEAN     shift, and go to state 25
    CHAR        shift, and go to state 26
    INT         shift, and go to state 27
    VOID        shift, and go to state 28
    IDENTIFIER  shift, and go to state 42

    FormalArg      go to state 82
    Type           go to state 45
    PrimitiveType  go to state 32


State 56

   37 VarDeclaratorId: IDENTIFIER .

    $default  reduce using rule 37 (VarDeclaratorId)


State 57

   25 FormalArg: Type VarDeclaratorId .
   38 VarDeclaratorId: VarDeclaratorId . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 52

    $default  reduce using rule 25 (FormalArg)


State 58

   39 Block: LBRACE Statements . RBRACE
   41 Statements: Statements . Statement

    BREAK            shift, and go to state 83
    CONTINUE         shift, and go to state 84
    IF               shift, and go to state 85
    NEW              shift, and go to state 62
    RETURN           shift, and go to state 86
    SUPER            shift, and go to state 63
    THIS             shift, and go to state 64
    WHILE            shift, and go to state 87
    BOOLEAN          shift, and go to state 25
    CHAR             shift, and go to state 26
    INT              shift, and go to state 27
    VOID             shift, and go to state 28
    DECAF_NULL       shift, and go to state 65
    LPAREN           shift, and go to state 66
    LBRACE           shift, and go to state 46
    RBRACE           shift, and go to state 88
    SEMICOLON        shift, and go to state 89
    NOT              shift, and go to state 67
    PLUS             shift, and go to state 68
    MINUS            shift, and go to state 69
    IDENTIFIER       shift, and go to state 90
    CHARACTER        shift, and go to state 71
    STRING           shift, and go to state 72
    BOOLEAN_LITERAL  shift, and go to state 73
    INTEGER          shift, and go to state 74

    Type             go to state 91
    PrimitiveType    go to state 32
    Block            go to state 92
    Statement        go to state 93
    Expression       go to state 94
    Primary          go to state 76
    NewArrayExpr     go to state 77
    NonNewArrayExpr  go to state 78
    FieldExpr        go to state 79
    ArrayExpr        go to state 80
    Literal          go to state 81


State 59

   13 Method: Modifiers Type IDENTIFIER FormalArgs Block .

    $default  reduce using rule 13 (Method)


State 60

   34 VarDeclaratorList: VarDeclaratorList COMMA VarDeclarator .

    $default  reduce using rule 34 (VarDeclaratorList)


State 61

   38 VarDeclaratorId: VarDeclaratorId LBRACKET RBRACKET .

    $default  reduce using rule 38 (VarDeclaratorId)


State 62

   74 NewArrayExpr: NEW . IDENTIFIER Dimensions
   75             | NEW . PrimitiveType Dimensions
   82 NonNewArrayExpr: NEW . IDENTIFIER ActualArgs

    BOOLEAN     shift, and go to state 25
    CHAR        shift, and go to state 26
    INT         shift, and go to state 27
    VOID        shift, and go to state 28
    IDENTIFIER  shift, and go to state 95

    PrimitiveType  go to state 96


State 63

   85 NonNewArrayExpr: SUPER . PERIOD IDENTIFIER ActualArgs
   89 FieldExpr: SUPER . PERIOD IDENTIFIER

    PERIOD  shift, and go to state 97


State 64

   80 NonNewArrayExpr: THIS .

    $default  reduce using rule 80 (NonNewArrayExpr)


State 65

   92 Literal: DECAF_NULL .

    $default  reduce using rule 92 (Literal)


State 66

   81 NonNewArrayExpr: LPAREN . Expression RPAREN

    NEW              shift, and go to state 62
    SUPER            shift, and go to state 63
    THIS             shift, and go to state 64
    DECAF_NULL       shift, and go to state 65
    LPAREN           shift, and go to state 66
    NOT              shift, and go to state 67
    PLUS             shift, and go to state 68
    MINUS            shift, and go to state 69
    IDENTIFIER       shift, and go to state 70
    CHARACTER        shift, and go to state 71
    STRING           shift, and go to state 72
    BOOLEAN_LITERAL  shift, and go to state 73
    INTEGER          shift, and go to state 74

    Expression       go to state 98
    Primary          go to state 76
    NewArrayExpr     go to state 77
    NonNewArrayExpr  go to state 78
    FieldExpr        go to state 79
    ArrayExpr        go to state 80
    Literal          go to state 81


State 67

   69 Expression: NOT . Expression

    NEW              shift, and go to state 62
    SUPER            shift, and go to state 63
    THIS             shift, and go to state 64
    DECAF_NULL       shift, and go to state 65
    LPAREN           shift, and go to state 66
    NOT              shift, and go to state 67
    PLUS             shift, and go to state 68
    MINUS            shift, and go to state 69
    IDENTIFIER       shift, and go to state 70
    CHARACTER        shift, and go to state 71
    STRING           shift, and go to state 72
    BOOLEAN_LITERAL  shift, and go to state 73
    INTEGER          shift, and go to state 74

    Expression       go to state 99
    Primary          go to state 76
    NewArrayExpr     go to state 77
    NonNewArrayExpr  go to state 78
    FieldExpr        go to state 79
    ArrayExpr        go to state 80
    Literal          go to state 81


State 68

   67 Expression: PLUS . Expression

    NEW              shift, and go to state 62
    SUPER            shift, and go to state 63
    THIS             shift, and go to state 64
    DECAF_NULL       shift, and go to state 65
    LPAREN           shift, and go to state 66
    NOT              shift, and go to state 67
    PLUS             shift, and go to state 68
    MINUS            shift, and go to state 69
    IDENTIFIER       shift, and go to state 70
    CHARACTER        shift, and go to state 71
    STRING           shift, and go to state 72
    BOOLEAN_LITERAL  shift, and go to state 73
    INTEGER          shift, and go to state 74

    Expression       go to state 100
    Primary          go to state 76
    NewArrayExpr     go to state 77
    NonNewArrayExpr  go to state 78
    FieldExpr        go to state 79
    ArrayExpr        go to state 80
    Literal          go to state 81


State 69

   68 Expression: MINUS . Expression

    NEW              shift, and go to state 62
    SUPER            shift, and go to state 63
    THIS             shift, and go to state 64
    DECAF_NULL       shift, and go to state 65
    LPAREN           shift, and go to state 66
    NOT              shift, and go to state 67
    PLUS             shift, and go to state 68
    MINUS            shift, and go to state 69
    IDENTIFIER       shift, and go to state 70
    CHARACTER        shift, and go to state 71
    STRING           shift, and go to state 72
    BOOLEAN_LITERAL  shift, and go to state 73
    INTEGER          shift, and go to state 74

    Expression       go to state 101
    Primary          go to state 76
    NewArrayExpr     go to state 77
    NonNewArrayExpr  go to state 78
    FieldExpr        go to state 79
    ArrayExpr        go to state 80
    Literal          go to state 81


State 70

   73 Primary: IDENTIFIER .
   83 NonNewArrayExpr: IDENTIFIER . ActualArgs
   90 ArrayExpr: IDENTIFIER . Dimension

    LPAREN    shift, and go to state 102
    LBRACKET  shift, and go to state 103

    LPAREN    [reduce using rule 73 (Primary)]
    $default  reduce using rule 73 (Primary)

    Dimension   go to state 104
    ActualArgs  go to state 105


State 71

   95 Literal: CHARACTER .

    $default  reduce using rule 95 (Literal)


State 72

   96 Literal: STRING .

    $default  reduce using rule 96 (Literal)


State 73

   93 Literal: BOOLEAN_LITERAL .

    $default  reduce using rule 93 (Literal)


State 74

   94 Literal: INTEGER .

    $default  reduce using rule 94 (Literal)


State 75

   36 VarDeclarator: VarDeclaratorId ASSIGN Expression .
   53 Expression: Expression . ASSIGN Expression
   54           | Expression . OR Expression
   55           | Expression . AND Expression
   56           | Expression . EQ Expression
   57           | Expression . NEQ Expression
   58           | Expression . LESS Expression
   59           | Expression . GREATER Expression
   60           | Expression . LEQ Expression
   61           | Expression . GEQ Expression
   62           | Expression . PLUS Expression
   63           | Expression . MINUS Expression
   64           | Expression . MUL Expression
   65           | Expression . DIV Expression
   66           | Expression . MOD Expression

    ASSIGN   shift, and go to state 106
    GREATER  shift, and go to state 107
    LESS     shift, and go to state 108
    EQ       shift, and go to state 109
    GEQ      shift, and go to state 110
    LEQ      shift, and go to state 111
    NEQ      shift, and go to state 112
    PLUS     shift, and go to state 113
    MINUS    shift, and go to state 114
    MUL      shift, and go to state 115
    DIV      shift, and go to state 116
    AND      shift, and go to state 117
    OR       shift, and go to state 118
    MOD      shift, and go to state 119

    $default  reduce using rule 36 (VarDeclarator)


State 76

   70 Expression: Primary .
   84 NonNewArrayExpr: Primary . PERIOD IDENTIFIER ActualArgs
   88 FieldExpr: Primary . PERIOD IDENTIFIER

    PERIOD  shift, and go to state 120

    $default  reduce using rule 70 (Expression)


State 77

   71 Primary: NewArrayExpr .

    $default  reduce using rule 71 (Primary)


State 78

   72 Primary: NonNewArrayExpr .
   91 ArrayExpr: NonNewArrayExpr . Dimension

    LBRACKET  shift, and go to state 103

    $default  reduce using rule 72 (Primary)

    Dimension  go to state 121


State 79

   87 NonNewArrayExpr: FieldExpr .

    $default  reduce using rule 87 (NonNewArrayExpr)


State 80

   86 NonNewArrayExpr: ArrayExpr .

    $default  reduce using rule 86 (NonNewArrayExpr)


State 81

   79 NonNewArrayExpr: Literal .

    $default  reduce using rule 79 (NonNewArrayExpr)


State 82

   24 FormalArgList: FormalArgList COMMA FormalArg .

    $default  reduce using rule 24 (FormalArgList)


State 83

   51 Statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 122


State 84

   50 Statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 123


State 85

   44 Statement: IF . LPAREN Expression RPAREN Statement
   45          | IF . LPAREN Expression RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 124


State 86

   48 Statement: RETURN . Expression SEMICOLON
   49          | RETURN . SEMICOLON

    NEW              shift, and go to state 62
    SUPER            shift, and go to state 63
    THIS             shift, and go to state 64
    DECAF_NULL       shift, and go to state 65
    LPAREN           shift, and go to state 66
    SEMICOLON        shift, and go to state 125
    NOT              shift, and go to state 67
    PLUS             shift, and go to state 68
    MINUS            shift, and go to state 69
    IDENTIFIER       shift, and go to state 70
    CHARACTER        shift, and go to state 71
    STRING           shift, and go to state 72
    BOOLEAN_LITERAL  shift, and go to state 73
    INTEGER          shift, and go to state 74
